Updated CSS files

--- a/CSS-files/homepagestyle.css
+++ b/CSS-files/homepagestyle.css
@@ -5,8 +5,8 @@ body, html
 .wrapper
 {
     width:1280px;
-    margin-top: 200px;
-    margin-bottom: 10px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     margin-right: 100px;
     margin-left: 200px;
 }
@@ -16,7 +16,7 @@ body, html
     width: 640px;
     height: 360px;
     margin: 0 auto;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 .image-card {
